# g2o_edge_test

./: CMakeLists.txt
include/: myG2Oedge.h
src/: CMakeLists.txt  bkp.cpp  edge_expmap_t_norm.cpp  edge_expmap_t_norm.h  multi_edge_expmap_t_norm.cpp  multi_edge_expmap_t_norm.h  myG2Oedge.cpp  testCal.cpp  testCalMult.cpp
